DiscordからUniQUEユーザーを検索できるようにする (#87)
* botの雛形を追加

* feat: ユーザーを外部IDから検索できるようにする

* Botを作成

* ラベラーにdiscordを追加

* ラベラーにDiscordを追加

* dockerにdiscordを追加

* miss

* chore: deployに関する設定を追加

* update dependics

* フォールバック

* miss

* Update UniQUE-Discord/src/internal/bot/handlers/interaction/command/general/help.go


* スペースミス

* 呼び出しのミス

* miss

* ばか

* ポートはいらない

* miss

---------
